fix send email button stylings

--- a/portal/static/css/portal.css
+++ b/portal/static/css/portal.css
@@ -667,6 +667,7 @@ input.clinic {
   font-size: 0.9em;
   padding: 0.5em;
   border-radius: 6px;
+  color: #FFF;
 }
 #profileEmailMessage {
   font-size: 0.87em;
