--- a/portal/static/css/eproms.css
+++ b/portal/static/css/eproms.css
@@ -700,6 +700,7 @@ input.clinic {
   font-size: 0.9em;
   padding: 0.5em;
   border-radius: 6px;
+  color: #FFF;
 }
 #profileEmailMessage {
   font-size: 0.87em;
