--- a/portal/templates/gil/index.html
+++ b/portal/templates/gil/index.html
@@ -130,7 +130,7 @@
     <script>
         $(document).ready(function() {
             $("body").attr("class", "page-home");
-            {% if redirect_uri %} $("#modal-login-register").modal("show");{%endif%}
+            {% if init_login_modal %} $("#modal-login-register").modal("show");{%endif%}
         });
     </script>
   {% endblock %}
