--- a/portal/templates/flask_user/forgot_password.html
+++ b/portal/templates/flask_user/forgot_password.html
@@ -10,10 +10,9 @@
 
 <p>Enter your e-mail address and we'll send an e-mail with a link to reset your password.</p>
 <br />
-<form action="" method="POST" class="form" role="form">
+<form id="forgetPasswordForm" action="" method="POST" class="form tnth-form to-validate" role="form" data-toggle="validator">
     {{ form.hidden_tag() }}
-    {{ render_field(form.email, tabindex=10, label="Your e-mail address", label_visible=false ) }}
+    {{ render_field(form.email, tabindex=10, label="Your e-mail address", label_visible=false, required=true) }}
     {{ render_submit_field(form.submit, tabindex=90) }}
 </form>
-
 {% endblock %}
