--- a/portal/static/css/gil.css
+++ b/portal/static/css/gil.css
@@ -4171,7 +4171,7 @@ only screen and (min-resolution: 192dpi),
 only screen and (min-resolution: 2dppx) {
     .logo {
         /*background-image: url(../img/logo@2x.png);*/
-        
+
         background-image: url(../img/logo-white.png);
         background-size: 218px 95px;
     }
@@ -5222,6 +5222,15 @@ body.modal-open .modal.is-modal-active .modal-dialog {
         padding: 30px 0 0 55px !important;
         font-size: 12px;
         line-height: 1;
+    }
+    .box-modal .button--login--register {
+        padding: 30px 0 10px 0 !important;
+    }
+    .box-modal .button--login {
+        padding: 10px 0 10px 0 !important;
+    }
+    .box-modal .button--register {
+        padding: 30px 0 0 0 !important;
     }
 }
 .box-modal__divider {
@@ -6589,7 +6598,7 @@ figure.nav-overlay {
 #repoVersion {
     position: relative;
     top: -40px;
-    padding-right: 40px; 
+    padding-right: 40px;
     display: none;
     font-size: 0.86em;
 }
