--- a/portal/static/less/gil.less
+++ b/portal/static/less/gil.less
@@ -4279,7 +4279,7 @@ only screen and (min-resolution: 192dpi),
 only screen and (min-resolution: 2dppx) {
     .logo {
         /*background-image: url(../img/logo@2x.png);*/
-        
+
         background-image: url(../img/logo-white.png);
         background-size: 218px 95px;
     }
@@ -5368,6 +5368,15 @@ body.modal-open .modal.is-modal-active .modal-dialog {
         padding: 30px 0 0 55px !important;
         font-size: 12px;
         line-height: 1;
+    }
+    .box-modal .button--login--register {
+        padding: 30px 0 10px 0 !important;
+    }
+    .box-modal .button--login {
+        padding: 10px 0 10px 0 !important;
+    }
+    .box-modal .button--register {
+        padding: 30px 0 0 0 !important;
     }
 }
 .box-modal__divider {
@@ -6776,7 +6785,7 @@ figure.nav-overlay {
 #repoVersion {
     position: relative;
     top: -40px;
-    padding-right: 40px; 
+    padding-right: 40px;
     display: none;
     font-size: 0.86em;
 }
