front-end allowing leaf orgs to be selected when applicable

--- a/portal/static/css/eproms.css
+++ b/portal/static/css/eproms.css
@@ -1163,7 +1163,7 @@ div.org-container legend {
   color: #474848;
 }
 div.org-container label.org-label{
-  margin: 0;
+  margin: 0.2em 0;
 }
 
 div.org-container .text-muter {
