--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -1289,7 +1289,7 @@ div.org-container legend {
   color: #474848;
 }
 div.org-container label.org-label{
-  margin: 0;
+  margin: 0.2em 0;
 }
 div.org-container .text-muter {
   margin-bottom: 4px;
