--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -1253,7 +1253,7 @@ div.org-container legend {
   color: #474848;
 }
 div.org-container label.org-label{
-  margin: 0;
+  margin: 0.1em 0;
 }
 div.org-container .text-muter {
   margin-bottom: 4px;
