--- a/portal/templates/portal_wrapper.html
+++ b/portal/templates/portal_wrapper.html
@@ -106,43 +106,43 @@
             <div id="tnthTopLinks">
                 <div class="tnth-btn-group">
                     {% if user %}
-                    <button id="tnthUserBtn" type="button" class="tnth-nav-btn tnth-white tnth-dropdown-toggle" data-toggle="tnth-dropdown">
-                        {{ _("Welcome") }}{% if user.display_name != "Anonymous" %}, {{ user.display_name }}{% endif %}
-                        {% if config.DEBUG_TIMEOUTS %}
-                        ({{ expires_in }} seconds remaining)
-                        {% endif %}
-                        <img src="{{movember_profile}}" width="50" height="50" />
                         {% if enable_links %}
-                        &nbsp;&nbsp; {{ _("MENU") }} <i class="fa fa-bars"></i>
+                        <ul class="tnth-dropdown-menu">
+                            <li><a href="{{PORTAL}}">{{ _("TrueNTH Home") }}</a></li>
+                            {% if user and not user.has_roles('write_only') %}
+                            <li><a href="{{PORTAL}}/profile">{{ _("My TrueNTH Profile") }}</a></li>
+                            {% endif %}
+                            <li><a href="{{PORTAL}}/about">{{ _("About TrueNTH") }}</a></li>
+                            {% if user and user.has_roles('application_developer') %}
+                            <li><a href="{{PORTAL}}/clients">{{ _("Client Applications") }}</a></li>
+                            {% endif %}
+                            {% if user and user.has_roles('provider') %}
+                            <li><a href="{{PORTAL}}/patients/">{{ _("Patients") }}</a></li>
+                            {% endif %}
+                            {% if user and user.has_roles('admin') %}
+                            <li><a href="{{PORTAL}}/admin">{{ _("User Administration") }}</a></li>
+                            <li><a href="{{PORTAL}}/settings">{{ _("Settings") }}</a></li>
+                            {% endif %}
+                            <li><a href="{{PORTAL}}/logout">{{ _("Log Out of TrueNTH") }}</a></li>
+                        </ul>
                         {% endif %}
-                    </button>
-                    {% if enable_links %}
-                    <ul class="tnth-dropdown-menu">
-                        <li><a href="{{PORTAL}}">{{ _("TrueNTH Home") }}</a></li>
-                        {% if user and not user.has_roles('write_only') %}
-                        <li><a href="{{PORTAL}}/profile">{{ _("My TrueNTH Profile") }}</a></li>
-                        {% endif %}
-                        <li><a href="{{PORTAL}}/about">{{ _("About TrueNTH") }}</a></li>
-                        {% if user and user.has_roles('application_developer') %}
-                        <li><a href="{{PORTAL}}/clients">{{ _("Client Applications") }}</a></li>
-                        {% endif %}
-                        {% if user and user.has_roles('provider') %}
-                        <li><a href="{{PORTAL}}/patients/">{{ _("Patients") }}</a></li>
-                        {% endif %}
-                        {% if user and user.has_roles('admin') %}
-                        <li><a href="{{PORTAL}}/admin">{{ _("User Administration") }}</a></li>
-                        <li><a href="{{PORTAL}}/settings">{{ _("Settings") }}</a></li>
-                        {% endif %}
-                        <li><a href="{{PORTAL}}/logout">{{ _("Log Out of TrueNTH") }}</a></li>
-                    </ul>
-                    {% endif %}
-                    {% elif login_url %}
-                    <button type="button" class="tnth-nav-btn tnth-white tnth-dropdown-toggle" data-toggle="tnth-dropdown">
-                        {{ _("Welcome") }}
-                    </button>
-                    <ul class="tnth-dropdown-menu" role="menu">
-                        <li><a href="{{ login_url }}">{{ _("Log In to TrueNTH") }}</a></li>
-                    </ul>
+                         <button id="tnthUserBtn" type="button" class="tnth-nav-btn tnth-white tnth-dropdown-toggle" data-toggle="tnth-dropdown">
+                            {% if enable_links %}
+                            &nbsp;&nbsp; {{ _("MENU") }} <i class="fa fa-bars"></i>
+                            {% endif %}
+                            <img src="{{movember_profile}}" width="50" height="50" />
+                             <em>{{ _("Welcome") }}</em>{% if user.display_name != "Anonymous" %}, {{ user.display_name }}{% endif %}
+                            {% if config.DEBUG_TIMEOUTS %}
+                                    ({{ expires_in }} seconds remaining)
+                                    {% endif %}
+                                </button>
+                            {% elif login_url %}
+                        <ul class="tnth-dropdown-menu" role="menu">
+                            <li><a href="{{ login_url }}">{{ _("Log In to TrueNTH") }}</a></li>
+                        </ul>
+                        <button type="button" class="tnth-nav-btn tnth-white tnth-dropdown-toggle" data-toggle="tnth-dropdown">
+                            {{ _("Welcome") }}
+                        </button>
                     {% endif %}
                 </div>
             </div>
