--- a/portal/static/css/gil.css
+++ b/portal/static/css/gil.css
@@ -4172,7 +4172,7 @@ only screen and (min-resolution: 2dppx) {
     .logo {
         /*background-image: url(../img/logo@2x.png);*/
 
-        background-image: url(../img/logo-white.png);
+        /*background-image: url(../img/logo-white.png);*/
         background-size: 218px 95px;
     }
 }
@@ -6734,5 +6734,204 @@ figure.nav-overlay {
     -o-transform: rotate(360deg);
     transform: rotate(360deg);
   }
+}
+
+.home--container {
+    border-width: 0px;
+    width: 100%;
+    height: 100%;
+    position: relative;
+    margin: 0 auto;
+    top: 170px;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background: inherit;
+    background-color: rgba(95, 103, 110, 1);
+    box-sizing: border-box;
+    border-width: 1px;
+    border-style: solid;
+    border-color: rgba(121, 121, 121, 1);
+    border-radius: 0px;
+    -moz-box-shadow: none;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    overflow: auto;
+    z-index: 1;
+}
+.home--header {
+    border-width: 0px;
+    margin: 0 auto;
+    width: 600px;
+    max-width: 100%;
+    height: 120px;
+    font-family: 'Arial';
+    font-weight: 400;
+    font-style: normal;
+    font-size: 1.5em;
+    color: #FFFFFF;
+    text-align: center;
+    position: relative;
+    padding: 1em 0;
+}
+.home--items-wrapper {
+    position: relative;
+    top: 300px;
+    background-color: rgba(95, 103, 110, 1);
+}
+.home--item-container, .home--item-container-full, .home--registration-container {
+    background: inherit;
+    background-color: #43484d;
+    box-sizing: border-box;
+    border-width: 1px;
+    border-style: solid;
+    border-color: rgba(121, 121, 121, 1);
+    border-radius: 0px;
+    -moz-box-shadow: none;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    font-family: 'Arial Bold', 'Arial Regular', 'Arial';
+    font-weight: 700;
+    font-style: normal;
+    font-size: 1em;
+    color: #FFFFFF;
+    height: 270px;
+    display: block;
+    padding: 40px;
+    float: left;
+    overflow-y: auto;
+}
+
+.home--item-container {
+    float: left;
+    width: 400px;
+    margin: 0 auto;
+    position: relative;
+    padding: 3em;
+    transition: all 0.5s ease-in;
+}
+
+.home--disabled-button {
+    opacity: 0.6;
+}
+#portalMain .page-intro {
+    padding: 1.2em;
+}
+#portalMain .icon-box__button span {
+    font-size: 0.8em;
+}
+#portalMain .icon-box__lowhead {
+    font-size: 1.2em;
+}
+.home--footer-container {
+    margin-top: 25em;
+    overflow: hidden;
+}
+
+.home--registraion-wrapper {
+    margin-top: 1.3em;
+}
+.home--item-container-full, .home--registration-container {
+    margin: 0 1em;
+    width: 100%;
+    max-width: 100%;
+    padding: 2.3em 4em 1.5em 3em
+}
+.home--registration-container p {
+    font-size: 1.2em;
+    padding: 1em 0;
+}
+
+::-webkit-scrollbar {
+    width: 0px;  /* remove scrollbar space */
+    background: transparent;  /* optional: just make scrollbar invisible */
+}
+/* optional: show position indicator in red */
+::-webkit-scrollbar-thumb {
+    background: #FF0000;
+}
+.home--item-text {
+    font-weight: normal;
+    font-size: 0.97em;
+}
+
+a.home--modal-link {
+    color: #8F9385;
+    display: none;
+}
+
+.home--item-text p {
+    overflow:hidden;
+    text-overflow-multiline:ellipsis;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+
+@media (min-width: 1200px) {
+    .home--item-container {
+        width: 542px;
+        max-width: 100%;
+        margin: 1em;
+    }
+}
+@media (max-width: 1199px) {
+    .home--item-container, .home--registration-container, .home--item-container-full {
+        width: 95%;
+        max-width: 100%;
+        margin: 1em 1.5em;
+    }
+    .home--registration-container {
+        padding: 1.5em 3em;
+    }
+}
+@media (max-width: 990px) {
+    .home--item-container, .home--registration-container, .home--item-container-full  {
+        width: 90%;
+        max-width: 100%;
+        margin: 1em 2.5em;
+    }
+    .home--item-text p {
+        overflow:hidden;
+        text-overflow-multiline:ellipsis;
+        width: 100%;
+        max-width: 100%;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+    }
+    a.home--modal-link {
+        display: inline-block;
+    }
+}
+@media (max-width: 750px) {
+    .home--item-container, .home--registration-container, .home--item-container-full  {
+        max-width: 100%;
+        margin: 5%;
+    }
+}
+@media (max-width: 680px) {
+    #portalMain .page-intro__main {
+        font-size: 0.9em;
+    }
+    #portalMain .page-intro__sub {
+        font-size: 0.85em;
+    }
+    #portalMain .icon-box__button {
+        font-size: 0.9em;
+        padding: 0.8em 1em 1em 1em;
+    }
+    .home--registration-container {
+        padding: 0.5em 3em;
+        font-size: 0.9em;
+        height: 300px;
+    }
+}
+
+@media (max-width: 550px) {
+    #portalMain .page-intro__main {
+        font-size: 0.8em;
+    }
+    #portalMain .page-intro__sub {
+        font-size: 0.7em;
+    }
 }
 /*# sourceMappingURL=app.css.map */
