add roles restrictions to view consents ui in profile, and minor css on orgs UI

--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -1146,7 +1146,7 @@
         </div>
     </div>
 
-    {% if person %}
+    {% if person and (person.has_role('patient') or person.has_role('partner'))%}
         <div class="row">
             <div class="col-md-12 col-xs-12">
                 <div class="profile-item-container">
