GIL hide upper banner fix and menu fixes

--- a/portal/templates/gil/contact.html
+++ b/portal/templates/gil/contact.html
@@ -81,6 +81,7 @@
                 $("#contactForm").submit();
             };
         });
+        $(".side-nav-items__item--contact").hide();
       });
   </script>
 {% endblock %}
