--- a/portal/templates/gil/decision-support.html
+++ b/portal/templates/gil/decision-support.html
@@ -73,6 +73,7 @@
     <script>
         $(document).ready(function() {
             $("body").attr("class", "page-about theme--intro-light");
+            $(".side-nav-items__item--decisionsupport").hide();
         });
     </script>
 {% endblock %}
