--- a/portal/templates/gil/symptom-tracker.html
+++ b/portal/templates/gil/symptom-tracker.html
@@ -40,3 +40,10 @@
       </div>
     </main>
 {% endblock %}
+{% block document_ready %}
+    <script>
+        $(document).ready(function() {
+            $(".side-nav-items__item--symptomtracker").hide();
+        });
+    </script>
+{% endblock %}
