--- a/portal/templates/gil/what-is-prostate-cancer.html
+++ b/portal/templates/gil/what-is-prostate-cancer.html
@@ -238,4 +238,11 @@
       </div>
     </main>
 {% endblock %}
+{% block document_ready %}
+    <script>
+        $(document).ready(function() {
+            $(".side-nav-items__item--whatisprostatecancer").hide();
+        });
+    </script>
+{% endblock %}
 
