--- a/portal/templates/gil/about.html
+++ b/portal/templates/gil/about.html
@@ -134,6 +134,7 @@
         $(document).ready(function() {
             $("body").attr("class", "page-about theme--intro-light");
             $("#repoVersion").show();
+            $(".side-nav-items__item--about").hide();
         });
     </script>
 {% endblock %}
