--- a/portal/templates/gil/base.html
+++ b/portal/templates/gil/base.html
@@ -70,20 +70,27 @@
         <h3 class="side-nav__heading">Navigation</h3>
         <ul class="side-nav-items">
           <li class="side-nav-items__item side-nav-items__item--home"><a href="{{PORTAL}}/">Home</a></li>
+          {% if user and user.has_role('provider') %}
+              <li class="side-nav-items__item"><a href="{{PORTAL}}/patients">Patients</a></li>
+          {% endif %}
           {% if user %}
               <li class="side-nav-items__item"><a href="{{PORTAL}}/profile">My TrueNTH Profile</a></li>
           {% endif %}
           <li class="side-nav-items__item"><a href="{{PORTAL}}/about">About TrueNTH</a></li>
-          <li class="side-nav-items__item side-nav-items__item--has-icon side-nav-items__item--accentuated"><a href="{{PORTAL}}/decision-support">
+          <li class="side-nav-items__item side-nav-items__item--has-icon side-nav-items__item--accentuated side-nav-items__item--decisionsupport"><a href="{{PORTAL}}/decision-support">
               <svg width="32" height="32">
                 <use xlink:href="#DS-Icon-Nav"></use>
               </svg>Decision Support</a></li>
-          <li class="side-nav-items__item side-nav-items__item--has-icon side-nav-items__item--accentuated"><a href="{{PORTAL}}/symptom-tracker">
+          <li class="side-nav-items__item side-nav-items__item--has-icon side-nav-items__item--accentuated side-nav-items__item--symptomtracker"><a href="{{PORTAL}}/symptom-tracker">
               <svg width="32" height="32">
                 <use xlink:href="#ST-Icon-Nav"></use>
               </svg>Symptom Tracker</a></li>
-          <li class="side-nav-items__item"><a href="{{PORTAL}}/what-is-prostate-cancer">Prostate Cancer Facts</a></li>
-          <li class="side-nav-items__item"><a href="{{PORTAL}}/contact">Contact</a></li>
+               {% if not user or (user and user.has_role('patient')) %}
+                  <li class="side-nav-items__item side-nav-items__item--has-icon side-nav-items__item--accentuated side-nav-items__item-disabled"><a href="javascript: loader(false);">Exercise and Diet</a></li>
+                  <li class="side-nav-items__item side-nav-items__item--has-icon side-nav-items__item--accentuated side-nav-items__item-disabled"><a href="javascript: loader(false);">Lived Experience</a></li>
+               {% endif %}
+          <li class="side-nav-items__item side-nav-items__item--whatisprostatecancer"><a href="{{PORTAL}}/what-is-prostate-cancer">Prostate Cancer Facts</a></li>
+          <li class="side-nav-items__item side-nav-items__item--contact"><a href="{{PORTAL}}/contact">Contact</a></li>
           {% if not user %}
             <li class="side-nav-items__button"><a data-toggle="modal" data-target="#modal-register">Join Us</a></li>
             <li class="side-nav-items__button"><a data-toggle="modal" data-target="#modal-login">Log In</a></li>
@@ -348,7 +355,9 @@
 
             $("li.side-nav-items__item a, a.icon-box__button--main, li.nav-list__item a").not("[data-toggle='modal']").not("[id='submitButton']").on("click", function(e) {
               e.stopPropagation();
-              loader(true);
+
+              if (!$(this).parent().hasClass("side-nav-items__item-disabled")) loader(true);
+              else loader(false);
             });
             setTimeout("loader(false);", 0);
           });
