GIL contact form: "Prostate Cancer" to "prostate cancer"

--- a/portal/templates/gil/contact.html
+++ b/portal/templates/gil/contact.html
@@ -52,8 +52,8 @@
                   <label class="field__label">About You</label>
                   <select id="about" name="about" class="field__select">
                     <option value="">Select</option>
-                    <option value="I've been diagnosed with Prostate Cancer">I've been diagnosed with Prostate Cancer</option>
-                    <option value="I want to learn more about Prostate Cancer">I want to learn more about Prostate Cancer</option>
+                    <option value="I've been diagnosed with prostate cancer">I've been diagnosed with prostate cancer</option>
+                    <option value="I want to learn more about prostate cancer">I want to learn more about prostate cancer</option>
                   </select>
                 </div>
               </div>
